add amortisation calculation api point
