# src/app/models/amortisation-calculation.ts
@@ -1,0 +1,8 @@
+
+export class AmortisationCalculation {
+    saved: number;
+    lost: number;
+    days: number;
+    entries: number;
+    days_with_full_battery: number;
+}
